--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,9 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>News Homepage</title>
 	</head>
-	<body class="bg-red-500 font-Inter">
-		<slot />
+	<body class="font-Inter flex justify-center bg-Dark-grayish-blue/50">
+		<main class="w-[375px] bg-Off-white py-[28px] px-4 relative">
+			<slot />
+		</main>
 	</body>
 </html>
