mobile view done

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -16,8 +16,8 @@ const navItems = [
     <Logo class="w-[44px] h-[28px]" />
     <IconMenu id="open-btn" class="cursor-pointer" />
   </div>
-  <div id="menu-modal" class="hidden bg-black/50 absolute inset-0 h-[99vh]">
-    <div  class="bg-Off-white w-64 absolute h-[99vh] right-0 top-0 px-[21px] py-[27px] ">
+  <div id="menu-modal" class="hidden bg-black/50 fixed inset-0 h-screen">
+    <div  class="bg-Off-white w-64 fixed h-screen right-0 top-0 px-[21px] py-[27px] ">
       <div class="flex justify-end">
         <IconMenuClose id="close-btn" class="cursor-pointer" />
       </div>
