--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Navbar from '../components/Navbar.astro'
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -7,9 +11,12 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>News Homepage</title>
 	</head>
-	<body class="font-Inter flex justify-center bg-Dark-grayish-blue/50">
-		<main class="w-[375px] bg-Off-white py-[28px] px-4 relative">
-			<slot />
+	<body class="font-Inter flex justify-center">
+		<main class=" bg-Off-white py-[28px] px-4 relative"> <!-- w-[375px] -->
+			<Navbar />
+			<section class="flex flex-col gap-16">
+				<slot />
+			</>
 		</main>
 	</body>
 </html>
