--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Navbar from '../components/Navbar.astro';
-import "../styles/global.css";
 import Hero from '../components/Hero.astro';
+import New from '../components/New.astro';
+import Articles from '../components/Articles.astro';
+import "../styles/global.css";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<Navbar />
+<Layout class="">
 	<Hero />
+	<New />
+	<Articles />
 </Layout>
