desktop view completed

--- a/src/components/Articles.astro
+++ b/src/components/Articles.astro
@@ -33,7 +33,7 @@ const articles: Article[] = [
 ];
 ---
 
-<section class="flex flex-col gap-8">
+<section class="flex flex-col gap-8 xl:flex-row">
   {
     articles.map((article: Article) => (
       <article class="flex gap-6">
