--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,14 +2,26 @@
 import { Image } from 'astro:assets'
 import mobileImg from '../assets/images/image-web-3-mobile.jpg'
 import desktopImg from '../assets/images/image-web-3-desktop.jpg'
+
+interface Props {
+  styles?: string
+}
+
+const {styles = ''} = Astro.props;
 ---
 
-<header class="flex flex-col gap-6 items-start">
+<header class={`flex flex-col gap-6 items-start ${styles}`}>
 
-  <Image class="sm:hidden" src={mobileImg} alt="image web 3 mobile"  />
-  <Image class="hidden sm:block" src={desktopImg} alt="image web 3 mobile"  />
+  <div class="xl:mb-6">
+    <Image class="sm:hidden" src={mobileImg} alt="image web 3 mobile"  />
+    <Image class="hidden sm:block" src={desktopImg} alt="image web 3 mobile"  />
+  </div>
   
-  <h1 class="text-[40px]/10 font-extrabold">The Bright Future of Web 3.0?</h1>
-  <p class="text-Dark-grayish-blue text-[15px]">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
-  <button class="uppercase bg-Soft-red px-8 py-3 font-bold cursor-pointer hover:bg-Soft-red/90">Read more</button>
+  <div class="xl:flex">
+    <h1 class="text-[40px]/10 font-extrabold mb-6 xl:text-[56px]/16 xl:flex-1">The Bright Future of Web 3.0?</h1>
+    <div class="xl:flex-1">
+      <p class="text-Dark-grayish-blue text-[15px] mb-6 xl:mb-8">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
+      <button class="uppercase bg-Soft-red px-8 py-3 font-bold cursor-pointer hover:bg-Soft-red/90">Read more</button>
+    </div>
+  </div>
 </header>
