fix: import font issue solved

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,7 +18,7 @@ const {styles = ''} = Astro.props;
   </div>
   
   <div class="xl:flex">
-    <h1 class="text-[40px]/10 font-extrabold mb-6 xl:text-[56px]/16 xl:flex-1">The Bright Future of Web 3.0?</h1>
+    <h1 class="text-[40px]/10 font-extrabold mb-6 xl:text-[56px]/14 xl:flex-1 xl:mb-0">The Bright Future of Web 3.0?</h1>
     <div class="xl:flex-1">
       <p class="text-Dark-grayish-blue text-[15px] mb-6 xl:mb-8">We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
       <button class="uppercase bg-Soft-red px-8 py-3 font-bold cursor-pointer hover:bg-Soft-red/90">Read more</button>
