--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
   font-style: normal;
   font-weight: 400 700 800;
   font-display: swap;
-  src: url("../assets/fonts/Inter-VariableFont_slnt\,wght.ttf") format("woff2");
+  src: url("../assets/fonts/Inter-VariableFont_slnt_wght.ttf") format("woff2");
 }
 
 @theme {
