New secctions added

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,10 +4,10 @@ import IconMenu from '../assets/images/icon-menu.svg';
 import Logo from '../assets/images/logo.svg'
 const navItems = [
   { name: 'Home', href: '/' },
-  { name: 'New', href: '#' },
-  { name: 'Popular', href: '#' },
-  { name: 'Trending', href: '#' },
-  { name: 'Categories', href: '#' }
+  { name: 'New', href: '/new' },
+  { name: 'Popular', href: '/popular' },
+  { name: 'Trending', href: '/trending' },
+  { name: 'Categories', href: '/categories' }
 ];
 ---
 
