--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,18 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
-import New from '../components/New.astro';
+import New from '../components/new/New.astro';
 import Articles from '../components/Articles.astro';
-import "../styles/global.css";
+import '../styles/global.css';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout title='Homepage'>
-	<div class="flex flex-col gap-16 lg:flex-row mb-16 lg:gap-8 lg:mb-[55px]">
-		<Hero styles="lg:flex-2" />
-		<New styles="lg:flex-1" />
-	</div>
-	<Articles />
+  <div class='flex flex-col gap-16 lg:flex-row mb-16 lg:gap-8 lg:mb-[55px]'>
+    <Hero styles='lg:flex-2' />
+    <New styles='lg:flex-1' />
+  </div>
+  <Articles />
 </Layout>
