--- a/src/pages/new/[slug].astro
+++ b/src/pages/new/[slug].astro
@@ -13,8 +13,16 @@ const currentArticle: New = articles.filter((article: New) => article.url === sl
 ---
 
 <Layout title={currentArticle.title}>
-  <a class="hover:text-Soft-red mb-6 block" href="/">Atrás</a>
   <h1 class="font-bold text-2xl mb-6">{currentArticle.title}</h1>
   <p class="text-Dark-grayish-blue mb-6 italic">{currentArticle.description}</p>
   <p>{currentArticle.content}</p>
+  <div class="flex justify-end mt-6">
+    <a id="go-back" class="hover:text-Soft-red mb-6 block cursor-pointer" >Atrás</a>
+  </div>
 </Layout>
+
+<script>
+  document.getElementById('go-back')?.addEventListener('click', () => {
+    window.history.back();
+  });
+</script>
