--- a/src/pages/categories.astro
+++ b/src/pages/categories.astro
@@ -3,6 +3,8 @@ import Layout from '../layouts/Layout.astro'
 import "../styles/global.css";
 ---
 
-<Layout>
-	<h1>Categories</h1>
+<Layout title='Categories'>
+	<div class="p-10">
+		<p class="text-center text-2xl font-bold text-Soft-red">Work in progress...</p>
+	</div>
 </Layout>
