--- a/src/pages/new/[slug].astro
+++ b/src/pages/new/[slug].astro
@@ -13,7 +13,7 @@ const currentArticle: New = articles.filter((article: New) => article.url === sl
 ---
 
 <Layout title={currentArticle.title}>
-  <h1 class="font-bold text-2xl mb-6">{currentArticle.title}</h1>
+  <h1 transition:name={currentArticle.title} class="font-bold text-2xl mb-6">{currentArticle.title}</h1>
   <p class="text-Dark-grayish-blue mb-6 italic">{currentArticle.description}</p>
   <p>{currentArticle.content}</p>
   <div class="flex justify-end mt-6">
