--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,13 @@ const {title} = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<!-- SEO -->
+		<!-- <meta name="description" content={description}> -->
+		<meta name="author" content={'David Ruiz'}>
+		<!-- OG Metatags -->
+		<meta property="og:title" content={title}>
+		<!-- <meta property="og:description" content={description}>
+		<meta property="og:image" content={image}> -->
 		<title>{title}</title>
 		<ClientRouter />
 	</head>
